--- a/src/components/SectionLink/sectionLink.module.css
+++ b/src/components/SectionLink/sectionLink.module.css
@@ -1,11 +1,12 @@
 .sectionLink {
     width: 100%;
-    height: 50px;
+    min-height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 4px;
     padding: 5px 13px;
+    margin-bottom: 2px;
 
     font-size: 20px;
     font-style: normal;
@@ -15,21 +16,36 @@
     color: #424242;
     background-color: #deebfe;
     cursor: pointer;
-    transition: padding 0.25s ease;
 }
 
-.sectionLink:hover {
-    padding: 5px 23px;
+.sectionLink:hover .row {
+    transform: translate(7px, 0);
 }
 
-.sectionLink.open .arrowIcon{
+.sectionLink:hover .arrowIcon {
+    transform: translate(-7px, 0);
+}
+
+.sectionLink.open .arrowIcon {
     transform: rotate(90deg);
+}
+
+.sectionLink.open:hover .arrowIcon {
+    transform: rotate(90deg) translate(0, 7px);
 }
 
 .active>.sectionLink, .sectionLink.active {
     color: #fff;
     background: radial-gradient(96.48% 1501.08% at 1.76% 11.81%,#14a6fc 0,#1477f8 100%);
-    padding: 5px 23px;
+    /* padding: 5px 23px; */
+}
+
+.active>.sectionLink .row, .sectionLink.active .row {
+    transform: translate(7px, 0);
+}
+
+.active>.sectionLink .arrowIcon, .sectionLink.active .arrowIcon {
+    transform: translate(-7px, 0);
 }
 
 .homeSectionLink .row div {
@@ -48,6 +64,10 @@
     display: flex;
     align-items: center;
     gap: 5px;
+
+    transform: translate(0, 0);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
 }
 
 .arrowIcon {
@@ -65,7 +85,6 @@
     margin-left: 15px;
     display: flex;
     flex-direction: column;
-    gap: 2px;
     transition: max-height 0.3s ease;
     overflow: hidden;
 }
@@ -79,8 +98,8 @@
 }
 
 .article {
-    white-space: nowrap; /* Запрет переноса текста на новую строку */
-    overflow: hidden; /* Скрываем текст, который не помещается в контейнере */
+    /* white-space: nowrap; Запрет переноса текста на новую строку */
+    /* overflow: hidden; Скрываем текст, который не помещается в контейнере */
     text-overflow: ellipsis;
 }
 
