--- a/src/layout/Navigator/navigator.module.css
+++ b/src/layout/Navigator/navigator.module.css
@@ -15,7 +15,6 @@
 .articlesSectionLinks {
     display: flex;
     flex-direction: column;
-    gap: 2px;
 
     width: 100%;
 }
